# hemera-qt5-sdk

./: CMakeLists.txt  HemeraQt5SDKConfig.cmake.in  README.md
cmake/modules/: CMakeLists.txt  HemeraMacros.cmake  HemeraPaths.cmake.in
plugins/: CMakeLists.txt
plugins/qml/: CMakeLists.txt
share/: CMakeLists.txt  dbus_policy.conf.in  hemera.prf.in  hemera_debug_script.sh.in  hemera_root_operation.socket.in  hemera_root_operation@.service.in  hemera_systemd.service.in
share/dbus/: com.ispirata.Hemera.ApplianceCrypto.xml  com.ispirata.Hemera.Application.DBusHolder.xml  com.ispirata.Hemera.Application.xml  com.ispirata.Hemera.DBusObject.xml  com.ispirata.Hemera.DeviceManagement.xml  com.ispirata.Hemera.Fingerprints.xml  com.ispirata.Hemera.Parsec.ApplicationHandler.xml  com.ispirata.Hemera.Parsec.xml  com.ispirata.Hemera.Planet.xml  com.ispirata.Hemera.RemovableStorageManager.xml  com.ispirata.Hemera.SoftwareManagement.ApplianceManager.xml  com.ispirata.Hemera.SoftwareManagement.ApplicationManager.xml  com.ispirata.Hemera.SoftwareManagement.ProgressReporter.xml  com.ispirata.Hemera.USBGadgetManager.xml
src/: CMakeLists.txt  hemeractconfig.h.in
src/HemeraCore/: CMakeLists.txt  HemeraQt5SDKCore.pc.in  HemeraQt5SDKCoreConfig.cmake.in  hemeraappliancecrypto.cpp  hemeraappliancecrypto.h  hemeraapplication.cpp  hemeraapplication.h  hemeraapplication_p.h  hemeraapplicationproperties.cpp  hemeraapplicationproperties.h  hemeraasyncinitdbusobject.cpp  hemeraasyncinitdbusobject.h  hemeraasyncinitdbusobject_p.h  hemeraasyncinitobject.cpp  hemeraasyncinitobject.h  hemeraasyncinitobject_p.h  hemeracommonoperations.cpp  hemeracommonoperations.h  hemeradbusapplicationholder.cpp  hemeradbusapplicationholder_p.h  hemeradevicemanagement.cpp  hemeradevicemanagement.h  hemerafetchsystemconfigoperation.h  hemerafingerprints.cpp  hemerafingerprints.h  hemeraglobal.h  hemeragravity.cpp  hemeragravity.h  hemeragravity_p.h  hemeraheadlessapplication.cpp  hemeraheadlessapplication.h  hemerainternalplanetinterface.cpp  hemerainternalplanetinterface_p.h  hemeraliterals.h  hemeranetworkaccessmanager.cpp  hemeranetworkaccessmanager.h  hemeranetworkdownloadoperation.cpp  hemeranetworkdownloadoperation.h  hemeranetworkmanager.cpp  hemeranetworkmanager.h  (+33 more)
src/HemeraGenerators/: CMakeLists.txt  HemeraQt5SDKGenerators.pc.in  HemeraQt5SDKGeneratorsConfig.cmake.in  hemerageneratorsbasecompiler.cpp  hemerageneratorsbasecompiler.h  hemerageneratorsbaseconfigure.cpp  hemerageneratorsbaseconfigure.h  hemerageneratorsbasegenerator.cpp  hemerageneratorsbasegenerator.h  hemerageneratorsbasegenerator_p.h  hemerageneratorsbasehagenerator.cpp  hemerageneratorsbasehagenerator.h  hemerageneratorsbasehagenerator_p.h  hemerageneratorsbasepropertiesgenerator.cpp  hemerageneratorsbasepropertiesgenerator.h  hemerageneratorscompilerplugin.cpp  hemerageneratorscompilerplugin.h  hemerageneratorscompilerplugin_p.h  hemerageneratorsconfigureplugin.cpp  hemerageneratorsconfigureplugin.h  hemerageneratorsconfigureplugin_p.h  hemerageneratorsgeneratorplugin.cpp  hemerageneratorsgeneratorplugin.h  hemerageneratorsgeneratorplugin_p.h  hemerageneratorsgeneratorpluginmanager.h  hemerageneratorspropertiesplugin.cpp  hemerageneratorspropertiesplugin.h  hemerageneratorspropertiesplugin_p.h
src/HemeraGui/: CMakeLists.txt  HemeraQt5SDKGuiConfig.cmake.in  hemeraguiapplication.cpp  hemeraguiapplication.h  hemeraguiapplication_p.h  hemeraqmlguiapplication.cpp  hemeraqmlguiapplication.h  hemeraqmlguiapplication_p.h  hemerasimpleqmlguiapplication.cpp  hemerasimpleqmlguiapplication.h
src/HemeraQml/: CMakeLists.txt  HemeraQt5SDKQml.pc.in  HemeraQt5SDKQmlConfig.cmake.in  hemeraqmlengine.cpp  hemeraqmlengine.h  hemeraqmlnetworkaccessmanagerfactory.cpp  hemeraqmlnetworkaccessmanagerfactory.h
src/HemeraSoftwareManagement/: CMakeLists.txt  HemeraQt5SDKSoftwareManagement.pc.in  HemeraQt5SDKSoftwareManagementConfig.cmake.in  hemerasoftwaremanagementappliancemanager.cpp  hemerasoftwaremanagementappliancemanager.h  hemerasoftwaremanagementapplicationmanager.cpp  hemerasoftwaremanagementapplicationmanager.h  hemerasoftwaremanagementapplicationpackage.cpp  hemerasoftwaremanagementapplicationpackage.h  hemerasoftwaremanagementapplicationpackage_p.h  hemerasoftwaremanagementapplicationupdate.cpp  hemerasoftwaremanagementapplicationupdate.h  hemerasoftwaremanagementconstructors_p.h  hemerasoftwaremanagementprogressreporter.cpp  hemerasoftwaremanagementprogressreporter.h  hemerasoftwaremanagementrepository.cpp  hemerasoftwaremanagementrepository.h  hemerasoftwaremanagementsystemupdate.cpp  hemerasoftwaremanagementsystemupdate.h
src/HemeraTest/: CMakeLists.txt  HemeraQt5SDKTest.pc.in  HemeraQt5SDKTestConfig.cmake.in  hemeradbustest.cpp  hemeradbustest.h  hemerafakegravitycenter.cpp  hemerafakegravitycenter.h  hemerafakeheadlessapplication.cpp  hemerafakeheadlessapplication.h  hemerafakeparsec.cpp  hemerafakeparsec.h  hemerafakeupdaterdaemon.cpp  hemerafakeupdaterdaemon.h  hemeratest.cpp  hemeratest.h  hemeratestwithapplicationenvironment.cpp  hemeratestwithapplicationenvironment.h
src/HemeraWidgets/: CMakeLists.txt  HemeraQt5SDKWidgets.pc.in  HemeraQt5SDKWidgetsConfig.cmake.in  hemeradeclarativeengine.cpp  hemeradeclarativeengine.h  hemeradeclarativenetworkaccessmanagerfactory.cpp  hemeradeclarativenetworkaccessmanagerfactory.h  hemeraqtquick1application.cpp  hemeraqtquick1application.h  hemeraqtquick1application_p.h  hemerasimpleqtquick1application.cpp  hemerasimpleqtquick1application.h  hemerawidgetsapplication.cpp  hemerawidgetsapplication.h  hemerawidgetsapplication_p.h
src/rootoperations/: CMakeLists.txt  fetchsystemconfigoperation.cpp  (+9 more)
tests/: CMakeLists.txt  async-init-dbus-object-basics.cpp  async-init-object-basics.cpp  common-operations-basics.cpp  gravity-center-basics.cpp  headless-application-basics.cpp  network-access-manager-basics.cpp  operation-basics.cpp
tools/: CMakeLists.txt  hemera-qt-sdk.supp  verify-coverage-threshold.py  with-session-bus.sh  with-system-bus.sh
translations/: CMakeLists.txt  qt5sdk_it.ts
(+78 files in other folders)
